--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     -->
     <title>Actions</title>
   </head>
-  <body>
+  <body id="actionbody">
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
@@ -36,5 +36,27 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script>
+      // Standard Google Universal Analytics code
+
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga'); // Note: https protocol here
+
+      ga('create', 'UA-147084998-2', 'auto');
+
+      ga('set', 'checkProtocolTask', function(){}); // Removes failing protocol check. @see: http://stackoverflow.com/a/22152353/1958200
+
+      ga('require', 'displayfeatures');
+
+      ga('send', 'pageview', '/index.html');
+    </script>
+
   </body>
 </html>
